--- a/communication/Cargo.toml
+++ b/communication/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "timely_communication"
-version = "0.12.0"
+name = "timely-communication-master"
+version = "0.13.0-dev.1"
 authors = ["Frank McSherry <fmcsherry@me.com>"]
 description = "Communication layer for timely dataflow"
 edition = "2018"
@@ -13,6 +13,9 @@ repository = "https://github.com/TimelyDataflow/timely-dataflow.git"
 keywords = ["timely", "dataflow"]
 license = "MIT"
 
+[lib]
+name = "timely_communication"
+
 [features]
 default = ["getopts"]
 
@@ -23,6 +26,6 @@ serde_derive = "1.0"
 serde = "1.0"
 abomonation = "0.7"
 abomonation_derive = "0.5"
-timely_bytes = { path = "../bytes", version = "0.12" }
-timely_logging = { path = "../logging", version = "0.12" }
+timely-bytes-master = { path = "../bytes", version = "=0.13.0-dev.1" }
+timely-logging-master = { path = "../logging", version = "=0.13.0-dev.1" }
 crossbeam-channel = "0.5.0"
