--- a/experiments/Cargo.toml
+++ b/experiments/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2018"
 
 [dependencies]
 criterion = "0.3.5"
-timely = { path = "../timely" }
+timely-master = { path = "../timely" }
 
 [[bench]]
 name = "exchange_bench"
