--- a/logging/Cargo.toml
+++ b/logging/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "timely_logging"
-version = "0.12.0"
+name = "timely-logging-master"
+version = "0.13.0-dev.1"
 authors = ["Frank McSherry <fmcsherry@me.com>"]
 edition = "2018"
 
@@ -11,3 +11,6 @@ homepage = "https://github.com/TimelyDataflow/timely-dataflow"
 repository = "https://github.com/TimelyDataflow/timely-dataflow.git"
 keywords = ["timely", "dataflow", "logging"]
 license = "MIT"
+
+[lib]
+name = "timely_logging"
